MIT License badge on the docs site was misaligned due to inline-block. Fixed.

--- a/docs/public/styles/site.less
+++ b/docs/public/styles/site.less
@@ -327,12 +327,13 @@ pre {
 	}
 	
 	.mit-licence {
+		.clearfix();
 		font-size: 13px;
 		margin-top: 20px;
 		
 		.licence-badge,
 		.licence-text {
-			display: inline-block;
+			float: left;
 			padding: 4px 8px;
 		}
 		.licence-badge {
